[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eukdetect"
version = "2.0.0"
authors = [
    { name = "Abigail Lind" }
]
description = "Detect eukaryotes from shotgun metagenomic data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/allind/EukDetect"

[project.scripts]
eukdetect = "eukdetect.wrappers.main:main"
eukdetect-normalize = "eukdetect.util.normalize_rpks:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"eukdetect.rules" = ["*.rules", "*.yaml"]
"eukdetect.envs" = ["*.yml"]
